--- a/html/main.css
+++ b/html/main.css
@@ -1006,7 +1006,7 @@ polygon {
     border: 2px solid var(--LASOblue500);
     height: auto;
 }
-.card_border_orange {
+.cardBorderbypB2C {
     border: 0.06em solid var(--BYP-Orange600) !important;
 }
 .cardBorder {
