--- a/templates/admin_panel/index.ejs
+++ b/templates/admin_panel/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {SEO:false, Title:`Simplified B2B Onboarding & Enhanced Engagement for Business Owners by Vicky Wang`, 
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:`Simplified B2B Onboarding & Enhanced Engagement for Business Owners by Vicky Wang`, 
 description:'', 
 pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_web.png'
 }) %>
