--- a/templates/admin_panel/index.ejs
+++ b/templates/admin_panel/index.ejs
@@ -3,7 +3,7 @@
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:`Simplified B2B Onboarding & Enhanced Engagement for Business Owners by Vicky Wang`, 
 description:'', 
-pageURL:'/worksamples/BYP_LH_wsbeebr/LHAdminPanel', thumbnailImgURL: 'vickywang_web.png'
+pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
 }) %>
 <!--Head-->
 
