--- a/templates/byp_b2b_subscription/index.ejs
+++ b/templates/byp_b2b_subscription/index.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:false, Title:`Mastering B2B SaaS Subscription Success by Vicky Wang`, 
-description:'', 
-pageURL:'/byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
+  description:'', 
+  pageURL:'byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
 }) %>
 <!--Head-->
 
