--- a/templates/byp_b2b_SaaS/index.ejs
+++ b/templates/byp_b2b_SaaS/index.ejs
@@ -3,7 +3,7 @@
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:false, Title:`Revolutionizing User Experience: A Comprehensive Redesign of the BookYourPet Platform by Vicky Wang`, 
 description:'byp_b2b_subscription', 
-pageURL:'worksamples/BYP_LH_wsbeebr/', thumbnailImgURL: 'vickywang_web.png'
+pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
 }) %>
 <!--Head-->
 
