--- a/templates/byp_b2c_booking/index.ejs
+++ b/templates/byp_b2c_booking/index.ejs
@@ -270,7 +270,7 @@
         <div class="Grid-cell ">
           <div class="element">
             <div class="Grid">
-              <img class="modal-target" src="diagram_affinity_map.svg" alt="Affinity Map">
+              <img class="modal-target" src="diagram_affinity_map.png" alt="Affinity Map">
             </div>
           </div>
           <div class="element">
@@ -308,7 +308,7 @@
         <div class="Grid-cell ">
           <div class="element">
             <div class="Grid">
-              <img class="modal-target" src="text_competitive_analysis.svg" alt="Competitive Analysis">
+              <img class="modal-target" src="text_competitive_analysis.png" alt="Competitive Analysis">
             </div>
           </div>
 
@@ -529,7 +529,7 @@
         <div class="Grid-cell ">
           <div class="element">
             <div class="Grid">
-              <img class="modal-target" src="img_service_listing.svg" alt="Competitive Analysis">
+              <img class="modal-target" src="img_service_listing.png" alt="Competitive Analysis">
             </div>
           </div>
         </div>
@@ -548,7 +548,7 @@
         <div class="Grid-cell ">
           <div class="element">
             <div class="Grid">
-              <img class="modal-target" src="img_cost_fee.svg" alt="Competitive Analysis">
+              <img class="modal-target" src="img_cost_fee.png" alt="Competitive Analysis">
             </div>
           </div>
         </div>
@@ -570,22 +570,10 @@
           </div>
         </div>
       </div>
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell ">
-          <div class="element">
-            <div class="Grid">
-              <img class="modal-target" src="img_service_listing.svg" alt="Competitive Analysis">
-            </div>
-          </div>
-        </div>
-      </div>
+
       <div class="blankHM"></div>
 
-      <div class="Grid Grid--gutters Grid--full u-textCenter">
-        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorBYPorange800`,
-                  titleFontSize:`h1`, contentTitle:`Testing & Iteration`, }) %>
-      </div>
-      <div class="blankHM"></div>
+
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
         <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorBYPorange800`,
@@ -617,11 +605,11 @@
               </li>
 
             </ul>
-            <h4> <strong class="Grey800">KPIs </strong></h4>
+            <h4> <strong class="Grey800">KPIs since launch</strong></h4>
             <ul>
 
               <li class="listCircle">
-                <h4>Booking Conversion Rate: Improved by 60% </h4>
+                <h4>Booking Conversion Rate: Improved by 169% </h4>
               </li>
 
               <li class="listCircle">
@@ -631,14 +619,14 @@
                 <h4>Booking Abandonment Rate: 67% Reduction </h4>
               </li>              
               <li class="listCircle">
-                <h4>Repeat Booking Rate: Increased by 24% </h4>
+                <h4>Repeat Booking Rate: Increased by 124% </h4>
               </li>
               <li class="listCircle">
-                <h4>Add-on Sales Rate: Increased by 13%</h4>
+                <h4>Add-on Sales Rate: Increased by 73%</h4>
               </li>
 
             </ul>
-            <h3><strong class="colorBYPorange800">What could be improved</strong></h3>
+            <h3><strong class="colorBYPorange800">What could be improved 💪</strong></h3>
             <ul>
 
               <li class="listCircle">
@@ -654,7 +642,7 @@
 
             </ul>
 
-            <h3><strong class="colorBYPorange800">Reflection </strong></h3>
+            <h3><strong class="colorBYPorange800">Reflection 📚</strong></h3>
             <h4> <strong class="Grey800">Using both qualitative and quantitative data during the research phase was crucial, providing a well-rounded understanding of user behavior and needs. With more time, conducting a larger survey group could further enhance the insights as we gain more users and improve the app.</strong></h4>
 
 
