--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -31,7 +31,7 @@
             <div class="element">
               <strong>
                 <div class="intro aos-init aos-animate" data-aos="fade-up">
-                  <h1> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
+                  <h1 class="font-test"> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
                 </div>
               </strong>
             </div>
