--- a/templates/byp_b2c_booking/index.ejs
+++ b/templates/byp_b2c_booking/index.ejs
@@ -498,6 +498,20 @@
         <div class="Grid-cell">
           <div class="element">
             <h3><strong>Streamline the Booking Process</strong></h3>
+            <ul>
+              <li class="listCircle">
+                <h4>Reduce total booking time </h4>
+              </li>
+              <li class="listCircle">
+                <h4>Minimize the number of clicks </h4>
+              </li>
+              <li class="listCircle">
+                <h4>Simplify user interface </h4>
+              </li>
+              <li class="listCircle">
+                <h4>Reduce clicks</h4>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -515,10 +529,16 @@
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="element">
-            <h3><strong>Comprehensive service listings</strong></h3>
+            <h3><strong>Comprehensive Service Listings & Transparent Pricing</strong></h3>
             <ul>
               <li class="listCircle">
-                Clear display of service costs and any additional fees.
+                <h4> Clear display of service names, descriptions, prices, and quantities </h4>
+              </li>
+              <li class="listCircle">
+                <h4> Transparent pricing for all services </h4>
+              </li>
+              <li class="listCircle">
+                <h4>Clear instructions and prompts </h4>
               </li>
 
             </ul>
@@ -536,14 +556,7 @@
       </div>
       <div class="blankHS"></div>
 
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-          <div class="element">
-            <h3><strong>Transparent Pricing: Clear display of service costs and any additional fees.</strong>
-            </h3>
-          </div>
-        </div>
-      </div>
+
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell ">
           <div class="element">
@@ -561,18 +574,97 @@
             <h3><strong>Personalized Experience:</strong></h3>
             <ul>
               <li class="listCircle">
-                Recommendations based on past bookings
+                <h4>Provide quick booking options </h4>
+
               </li>
               <li class="listCircle">
-                Easy appointment rebooking
+                <h4>Offer recommendations based on past bookings </h4>
+
               </li>
+              <li class="listCircle">
+                <h4>Facilitate easy rebooking of appointments </h4>
+
+              </li>
+              <li class="listCircle">
+                <h4>Simplify rescheduling and cancellations </h4>
+
+              </li>
+
             </ul>
           </div>
         </div>
       </div>
-
+      <div class="Grid Grid--full Grid--gutters">
+        <div class="Grid-cell ">
+          <div class="element">
+            <div class="Grid">
+              <img class="modal-target" src="img_personalized.png" alt="Competitive Analysis">
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="blankHM"></div>
+      <div class="Grid Grid--gutters Grid--full u-textCenter">
+        <%- include(`${templatePath}/shared/comp_textualElements_title`, { titleColor:`colorBYPorange800`,
+                  titleFontSize:`h1`, contentTitle:`Design, Testing & Iteration`, }) %>
+      </div>
+      <div class="Grid Grid--full Grid--gutters">
+        <div class="Grid-cell">
+          <div class="element">
+            <h3> <strong class="Grey800">Design and Test Version 1:            </strong></h3>
 
+            <ul>
+              <li class="listCircle">
+                <h4>Focus on streamlining the booking process
+                </h4>
+              </li>
+              <li class="listCircle">
+                <h4>Improve the entire flow
+                </h4>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="Grid-cell">
+          <div class="element">
+            <h3> <strong class="Grey800">Design and Test Version 2:
+
+            </strong></h3>
+
+            <ul>
+              <li class="listCircle">
+                <h4>Focus on the comprehensive appointment process
+                </h4>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+
+        <div class="Grid-cell">
+          <div class="element">
+            <h3> <strong class="Grey800">Design and Test Version 3:
+
+            </strong></h3>
+
+            <ul>
+              <li class="listCircle">
+                <h4>Reduce total booking time and number of clicks
+
+
+
+
+
+                </h4>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+
+      </div>
+      <div class="blankHM"></div>
 
 
       <div class="Grid Grid--gutters Grid--full u-textCenter">
@@ -583,8 +675,8 @@
       <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="element">
-            <h3><strong class="colorBYPorange800">What went well so far 👍</strong></h3>
-            <h4> <strong class="Grey800">Streamline the Booking Process  </strong></h4>
+            <h2><strong class="colorBYPorange800">What went well so far 👍</strong></h2>
+            <h3> <strong class="Grey800">Streamline the Booking Process </strong></h3>
 
             <ul>
               <li class="listCircle">
@@ -605,7 +697,7 @@
               </li>
 
             </ul>
-            <h4> <strong class="Grey800">KPIs since launch</strong></h4>
+            <h3> <strong class="Grey800">KPIs since launch</strong></h3>
             <ul>
 
               <li class="listCircle">
@@ -617,7 +709,7 @@
               </li>
               <li class="listCircle">
                 <h4>Booking Abandonment Rate: 67% Reduction </h4>
-              </li>              
+              </li>
               <li class="listCircle">
                 <h4>Repeat Booking Rate: Increased by 124% </h4>
               </li>
@@ -626,7 +718,7 @@
               </li>
 
             </ul>
-            <h3><strong class="colorBYPorange800">What could be improved 💪</strong></h3>
+            <h2><strong class="colorBYPorange800">What could be improved 💪</strong></h2>
             <ul>
 
               <li class="listCircle">
@@ -638,12 +730,12 @@
               </li>
               <li class="listCircle">
                 <h4>Based on feedback from business owners, we need to enable them to categorize and reorder services to meet individual service display needs. </h4>
-              </li>              
+              </li>
 
             </ul>
 
             <h3><strong class="colorBYPorange800">Reflection 📚</strong></h3>
-            <h4> <strong class="Grey800">Using both qualitative and quantitative data during the research phase was crucial, providing a well-rounded understanding of user behavior and needs. With more time, conducting a larger survey group could further enhance the insights as we gain more users and improve the app.</strong></h4>
+            <h4> Using both qualitative and quantitative data during the research phase was crucial, providing a well-rounded understanding of user behavior and needs. With more time, conducting a larger survey group could further enhance the insights as we gain more users and improve the app.</h4>
 
 
 
