--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -22,9 +22,9 @@
     <div class="Grid Grid--gutters Grid--full u-textCenter positionFixed">
       <div class="Grid-cell">
         <div class="element ">
-          <a  href="/resume/resume.pdf"> <button class="buttonFlip buttonResume">PDF Resume
+          <a href="/resume/resume.pdf"> <button class="buttonFlip buttonResume">PDF Resume
             </button></a>
-            <!--buttonBlack-->
+          <!--buttonBlack-->
 
         </div>
       </div>
@@ -110,21 +110,21 @@
               <h5> <strong>Design & Research</strong> </h5>
               <h5>User-Centered Design (UCD)</h5>
               <h5>Wireframing &amp; Prototyping</h5>
-              <h5>User Research & Interviews              </h5>
+              <h5>User Research & Interviews </h5>
               <h5>Information Architecture</h5>
-              <h5>Usability Testing & Heuristic Evaluation              </h5>
+              <h5>Usability Testing & Heuristic Evaluation </h5>
               <h5>Interaction Design</h5>
               <h5>Responsive and Adaptive Design</h5>
               <h5>Visual Design</h5>
 
               <h5>Project Management & Business Acumen </h5>
-              <h5>Design Research & Data Analysis              </h5>
-              <h5>Surveys & Questionnaires              </h5>
-              <h5>User Personas & Journey Mapping              </h5>
+              <h5>Design Research & Data Analysis </h5>
+              <h5>Surveys & Questionnaires </h5>
+              <h5>User Personas & Journey Mapping </h5>
 
             </div>
 
-   
+
             <div class="element">
               <h5> <strong> Technical Skills</strong> </h5>
               <h5> HTML/CSS/JavaScript</h5>
@@ -154,44 +154,60 @@
             <div class="element">
               <h3><strong class="colorVW"> EXPERIENCE</strong></h3>
               <h5><strong>BookYourPet | User Experience Designer </strong></h5>
-              <h6 class="textItalic">Oct. 2021 - Present, Full-time Contractor</h6>
+              <h6 class="textItalic">Oct. 2021 - Feb. 2024, Full-time Contractor</h6>
+              <h6 class="textItalic">Feb. 2024 - Present, Full-time</h6>
+
               <div class="blankHXXS"></div>
 
               <ul>
-                <li class="listCircle">Spearheaded the enhancement of key web app functionalities, including appointment scheduling, team management, and payment processes, achieving a 10% increase in booking conversions and a 36% growth in completed appointments.</li>
+                <li class="listCircle">Redesigned and streamlined key workflows in the B2B web platform, including onboarding, service creation, and settings, resulting in a 79% reduction in onboarding time and an 85% increase in task completion rate.</li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Optimized the account setup workflow in the web app, reducing setup duration by 52% through targeted improvements in the booking system.
+                <li class="listCircle">Developed and implemented upsell strategies with stakeholders during the business-facing booking process, including add-ons, packages, and membership options, leading to a 42% increase in average transaction value.
                 </li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Engaged in collaborative planning and design decision-making with a cross-functional team, contributing significantly to the development and refinement of the product roadmap using collaboration tools like Trello and Slack.
+                <li class="listCircle">Led the redesign of the B2C mobile booking experience, achieving a 169% increase in booking conversions and a 48% decrease in booking time.
                 </li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Led comprehensive usability testing, conducted user interviews, and performed competitive analysis using analytics tools such as Posthog, working closely with stakeholders and potential users to continually enhance the user experience.</li>
+                <li class="listCircle">Adapted the B2B web platform to a minimal, efficient mobile version, ensuring key functionalities were maintained, contributing to a 35% increase in mobile app adoption.</li>
+
+                <div class="blankHXXS"></div>
+
+                <li class="listCircle">Conducted comprehensive usability testing, user interviews, and competitive analysis, resulting in a 38% reduction in user errors and a 41% increase in user satisfaction scores.</li>
+                <div class="blankHXXS"></div>
+
+                <li class="listCircle">Collaborated closely with stakeholders and cross-functional teams to align design initiatives with business goals, enhancing communication and project alignment.</li>
+                <div class="blankHXXS"></div>
+
+                <li class="listCircle">Contributed to the development and refinement of the product roadmap using tools like Trello and Notion, leading to a 15% improvement in project delivery times.</li>
+                <div class="blankHXXS"></div>
+
+                <li class="listCircle">Established a robust design system and provided tailored guidance for individual deliverables, resulting in improved team productivity and faster development times.</li>
+
               </ul>
             </div>
             <div class="element">
 
               <h5><strong>LASO Health | Product Designer </strong></h5>
-              <h6 class="textItalic">Sep. 2023 - Jan. 2024, Part-time Contractor</h6>
+              <h6 class="textItalic">Aug. 2023 - Jan. 2024, Part-time Contractor</h6>
               <div class="blankHXXS"></div>
 
 
               <ul>
-                <li class="listCircle">Designed an Admin Panel focused on user management, integrating advanced features and functionalities based on insights derived from extensive UX research and the existing B2B platform, with an emphasis on Enhanced User Management, Advanced Data Accessibility, and Informed Decision-Making to cater to LASO's diverse user base.</li>
+                <li class="listCircle">Designed an Admin Panel for user management, integrating advanced features based on UX research.</li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Developed a cost-benefit calculator focused on maximizing customer savings and boosting subscription growth.
+                <li class="listCircle">Developed a cost-benefit calculator to maximize customer savings and boost subscriptions.
                 </li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Revitalized the design system for both mobile and web applications, catering to consumer and B2B audiences, and enhancing the previous framework.
+                <li class="listCircle">Revitalized the design system for mobile and web applications, enhancing user experience.
                 </li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Crafted responsive product pages and updated content, informed by findings from a dedicated user research case study.</li>
+                <li class="listCircle">Crafted responsive product pages and updated content based on user research.</li>
               </ul>
             </div>
             <div class="element">
@@ -200,7 +216,7 @@
               <div class="blankHXXS"></div>
 
               <ul>
-                <li class="listCircle">Created a tablet-based admin panel for the 'Clean Spaces' app, mirroring the features and functions of the existing consumer-focused mobile application.</li>
+                <li class="listCircle">Designed a tablet-based admin panel for the 'Clean Spaces' app, replicating key features and functionality from the consumer mobile application.</li>
               </ul>
             </div>
             <div class="element">
@@ -209,12 +225,14 @@
               <div class="blankHXXS"></div>
 
               <ul>
-                <li class="listCircle">Designed and implemented a portfolio website from scratch by using HTML/CSS/JavaScript. deployed on AWS. Used GitHub for version control </li>
+                <li class="listCircle">Designed and developed a portfolio website from scratch using HTML, CSS, JavaScript, and EJS, deployed on AWS. </li>
               </ul>
               <div class="blankHXXS"></div>
-
+              <li class="listCircle">Utilized GitHub for version control to manage updates and iterations.</li>
+              </ul>
+              <div class="blankHXXS"></div>
               <ul>
-                <li class="listCircle">Updated and maintained the UI components and responsive grid of the design system for this site. </li>
+                <li class="listCircle">Updated and maintained UI components and a responsive grid system for the site.</li>
               </ul>
             </div>
             <div class="blankHXS"></div>
@@ -240,7 +258,7 @@
               <div class="blankHXXS"></div>
 
               <ul>
-                <li class="listCircle">Conducted zoning code research 
+                <li class="listCircle">Conducted zoning code research
                 </li>
                 <li class="listCircle">Produced elevation, section and details documents
                 </li>
@@ -254,7 +272,7 @@
               <div class="blankHXXS"></div>
 
               <ul>
-                <li class="listCircle">Produced digital model and renderings. 
+                <li class="listCircle">Produced digital model and renderings.
                 </li>
                 <li class="listCircle">Generated building materials palette for facade updates
                 </li>
