--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -55,13 +55,16 @@
               <h3> <strong class="colorVW"> EDUCATION</strong> </h3>
 
               <h5><strong>University of California, Berkeley </strong></h5>
-              <h6 class="textItalic"> August 2015 - May 2019</h6>
+              <h6 class="textItalic"> August 2015 - May 2017</h6>
+              <h6 class="textItalic"> August 2018 - May 2019</h6>
+
               <div class="blankHXXS"></div>
 
+              <h5 class="fontWeight400 Grey700">Master of Architecture</h5>
 
-              <h5>College of Environmental Design, 3-year Program</h5>
-              <h5>Master of Architecture </h5>
-              <h5>Architecture & Building Science/Technology </h5>
+              <h6>College of Environmental Design, 3-year Program</h6>
+
+              <h6>Architecture & Building Science/Technology </h6>
 
             </div>
             <div class="element">
@@ -69,15 +72,15 @@
               <h6 class="textItalic"> September 2009 - July 2013</h6>
               <div class="blankHXXS"></div>
 
-              <h5>Bachelor of Art </h5>
-              <h5> Art &amp; Design &amp; Landscape Design </h5>
+              <h5 class="fontWeight400 Grey700">Bachelor of Art</h5>
+              <h6> Art &amp; Design &amp; Landscape Design </h6>
             </div>
             <div class="element">
               <h5> <strong>Google UX Design Professional Certificate </strong> </h5>
               <h6 class="textItalic"> Online class, Completed August 2021</h6>
               <div class="blankHXXS"></div>
 
-              <h5>Google UX certificate on Coursera</h5>
+              <h6>Google UX certificate on Coursera</h6>
 
 
 
@@ -87,19 +90,27 @@
               <h6 class="textItalic"> March - May 2023</h6>
               <div class="blankHXXS"></div>
 
-              <h5>Learn User Research: Generative</h5>
-              <h5>Learn Design Thinking: Ideation</h5>
-              <h5>Learn Interaction Design</h5>
-              <h5>Introduction to UI and UX Design </h5>
+              <h6>Learn User Research: Generative</h6>
+              <h6>Learn Design Thinking: Ideation</h6>
+              <h6>Learn Interaction Design</h6>
+              <h6>Introduction to UI and UX Design </h6>
 
-              <h5>Learn Responsive Design</h5>
-              <h5>Learn Navigation Design</h5>
-              <h5>Learn JavaScript</h5>
+              <h6>Learn Responsive Design</h6>
+              <h6>Learn Navigation Design</h6>
+              <h6>Learn JavaScript</h6>
 
               <br>
               <h6 class="textItalic"> June 2023</h6>
 
-              <h5>Front-End Engineer </h5>
+              <h6>Front-End Engineer </h6>
+            </div>
+            <div class="element">
+              <h5> <strong>Udemy </strong> </h5>
+
+              <h6 class="textItalic"> July 2024</h6>
+
+              <h6>The Complete JavaScript Course:
+                From Zero to Expert </h6>
             </div>
 
 
@@ -108,43 +119,53 @@
 
               <h3> <strong class="colorVW"> SKILLS</strong> </h3>
               <h5> <strong>Design & Research</strong> </h5>
-              <h5>User-Centered Design (UCD)</h5>
-              <h5>Wireframing &amp; Prototyping</h5>
-              <h5>User Research & Interviews </h5>
-              <h5>Information Architecture</h5>
-              <h5>Usability Testing & Heuristic Evaluation </h5>
-              <h5>Interaction Design</h5>
-              <h5>Responsive and Adaptive Design</h5>
-              <h5>Visual Design</h5>
+              <h6>User-Centered Design</h6>
+              <h6>User Research</h6>
+              <h6>Usability Testing</h6>
+              <h6>Information Architecture</h6>
 
-              <h5>Project Management & Business Acumen </h5>
-              <h5>Design Research & Data Analysis </h5>
-              <h5>Surveys & Questionnaires </h5>
-              <h5>User Personas & Journey Mapping </h5>
+              <h6>Wireframing</h6>
+              <h6>Prototyping</h6>
+              <h6>Design System</h6>
+              <h6>Interaction Design</h6>
+              <h6>Responsive and Adaptive Design</h6>
+              <h6>Visual Design</h6>
+
+              <h6>Project Management</h6>
+
+            </div>
+            <div class="element">
+
+              <h5> <strong>Software</strong> </h5>
+              <h6>Figma</h6>
+              <h6>Adobe XD </h6>
+              <h6>Sketch</h6>
+              <h6>Adobe Creative Suite </h6>
+
+
 
             </div>
 
-
             <div class="element">
-              <h5> <strong> Technical Skills</strong> </h5>
-              <h5> HTML/CSS/JavaScript</h5>
+              <h5> <strong> Programming</strong> </h5>
+              <h6> HTML/CSS/JavaScript</h6>
 
-              <h5> EJS(Embedded JavaScript templates)</h5>
-              <h5> jQuery</h5>
+              <h6> EJS(Embedded JavaScript templates)</h6>
+              <h6> jQuery</h6>
 
 
-              <h5> JavaScript, EJS(Embedded JavaScript templates) </h5>
+              <h6> JavaScript, EJS(Embedded JavaScript templates) </h6>
 
             </div>
             <div class="element">
               <h5> <strong>3D Design & Fabrication Tools</strong> </h5>
-              <h5> Unity </h5>
-              <h5> 3Dmax Studio, Rhino, SketchUp </h5>
-              <h5> Grasshopper, Ladybug, DIVA </h5>
-              <h5> 3D Printing </h5>
-              <h5> 3D Scanner (NextEngine 3D) </h5>
-              <h5> CNC (Techno Isel 3-axis CNC router) </h5>
-              <h5> Laser Cutter, Blade Cutter (Zund S3 Digital) </h5>
+              <h6> Unity </h6>
+              <h6> 3Dmax Studio, Rhino, SketchUp </h6>
+              <h6> Grasshopper, Ladybug, DIVA </h6>
+              <h6> 3D Printing </h6>
+              <h6> 3D Scanner (NextEngine 3D) </h6>
+              <h6> CNC (Techno Isel 3-axis CNC router) </h6>
+              <h6> Laser Cutter, Blade Cutter (Zund S3 Digital) </h6>
             </div>
 
           </div>
@@ -163,11 +184,11 @@
                 <li class="listCircle">Redesigned and streamlined key workflows in the B2B web platform, including onboarding, service creation, and settings, resulting in a 79% reduction in onboarding time and an 85% increase in task completion rate.</li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Developed and implemented upsell strategies with stakeholders during the business-facing booking process, including add-ons, packages, and membership options, leading to a 42% increase in average transaction value.
+                <li class="listCircle">Developed and implemented upsell strategies with stakeholders during the business-facing booking process, including add-ons, packages, and membership options, resulting in an average increase of $52 per transaction, a 14% increase.
                 </li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Led the redesign of the B2C mobile booking experience, achieving a 169% increase in booking conversions and a 48% decrease in booking time.
+                <li class="listCircle">Led the redesign of the B2C mobile booking experience, achieving a 169% increase in booking conversions and reducing booking time by 6 minutes on avarage.
                 </li>
                 <div class="blankHXXS"></div>
 
@@ -181,7 +202,7 @@
                 <li class="listCircle">Collaborated closely with stakeholders and cross-functional teams to align design initiatives with business goals, enhancing communication and project alignment.</li>
                 <div class="blankHXXS"></div>
 
-                <li class="listCircle">Contributed to the development and refinement of the product roadmap using tools like Trello and Notion, leading to a 15% improvement in project delivery times.</li>
+                <li class="listCircle">Contributed to the development and refinement of the product roadmap using tools like Trello and Notion, leading to an improvement in project delivery times. </li>
                 <div class="blankHXXS"></div>
 
                 <li class="listCircle">Established a robust design system and provided tailored guidance for individual deliverables, resulting in improved team productivity and faster development times.</li>
