--- a/templates/intro/index.ejs
+++ b/templates/intro/index.ejs
@@ -52,7 +52,7 @@
         <div class='content'>
           <h2 class='title'>Shifting Focus</h2>
           <p class='description'>
-            The Evolution of LASO Local & Telehealth to RX Zero
+            Transforming Local and Telehealth Services into RX Zero
           </p>
           <a href="/"><button class="intro">View Project</button></a>
         </div>
