--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -11,7 +11,7 @@
   <%- include( `${templatePath}/shared/compProgressBar`) %>
 
   <%- include(`${templatePath}/shared/block_nav_header`, { 
-    type:'logoText', 
+    type:'backText', 
     leftArrowColor:``,
     currentPage: '', 
     PageUrl:'/' }) %>
@@ -22,7 +22,7 @@
     <div class="Grid Grid--gutters Grid--full u-textCenter positionFixed">
       <div class="Grid-cell">
         <div class="element ">
-          <a href="/resume/resume.pdf"> <button class="buttonFlip buttonResume">PDF Resume
+          <a href="/resume/resume.pdf" target="_blank"> <button class="buttonFlip buttonResume">PDF Resume
             </button></a>
           <!--buttonBlack-->
 
