--- a/templates/shared/block_cardProjects.ejs
+++ b/templates/shared/block_cardProjects.ejs
@@ -193,7 +193,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required </h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>Shifting Focus: The Evolution of LASO Local & Telehealth to RX Zero              </strong></h3>
+              <h3 class="arrCard" data-aos="fade-up"><strong>Shifting Focus: Transforming Local and Telehealth Services into RX Zero              </strong></h3>
               <h4>This case study delves into LASO Health's strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.</h4>
             </div>
           </div>
