--- a/templates/refining_rx_zero/index.ejs
+++ b/templates/refining_rx_zero/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, { SEO:true, Title:`The Evolution of LASO Local & Telehealth to RX Zero by
+<%- include(`${templatePath}/shared/head`, { SEO:true, Title:`Transforming Local and Telehealth Services into RX Zero by
   Vicky Wang`, description:'', pageURL:'/worksamples/BYP_LH_wsbeebr/LHRefiningRXZero/',
   thumbnailImgURL: 'vickywang_web.png' }) %>
 <!--Head-->
