--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="colorBgVW">
+<html lang="en" class="colorBgVW pattern1">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:`Vicky's Resume`, 
   description:`I'm a UX Designer focused on bridging efficiency and engagement in SaaS, administrative Interfaces, and user-Driven applications`, 
@@ -33,7 +33,7 @@
 
   <div class="marginM">
 
-    <div class="wrapper colorBgWhie shadowBox">
+    <div class="wrapper colorBgVW pattern2 shadowBox">
       <div class="marginM">
         <div class="blankHXS"></div>
 
@@ -249,6 +249,7 @@
                 <li class="listCircle">Designed and developed a portfolio website from scratch using HTML, CSS, JavaScript, and EJS, deployed on AWS. </li>
               </ul>
               <div class="blankHXXS"></div>
+              <ul>
               <li class="listCircle">Utilized GitHub for version control to manage updates and iterations.</li>
               </ul>
               <div class="blankHXXS"></div>
