--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="colorBgVW pattern1">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Vicky W. | UX Designer', 
   description:'Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.', 
@@ -40,7 +40,7 @@
             <div class="element">
               <div class="widthFitContent">
                 <div class="dropdownSM">
-                  <img title="Share" class="iconS hoverGrey300 paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                  <img title="Share" class="iconS hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
                   <div class="dropdownSM-content">
                     <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
                       on LinkedIn</a>
@@ -58,7 +58,7 @@
       <div class="Grid-cell">
         <div class="ClipboardBoxIconOnly">
           <button class="ClipboardIconOnly">
-            <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+            <img title="Copy Email to Clipboard" class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
             <p class="clickIconCopy">vickyw.design@gmail.com</p>
           </button>
         </div>
@@ -66,18 +66,18 @@
       </div>
       <div class="Grid-cell">
         <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
+          <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
         </a>
       </div>
 
       <div class="Grid-cell">
         <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+          <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
         </a>
       </div>
       <div class="Grid-cell">
         <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+          <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
       <div class="Grid-cell">
@@ -301,7 +301,7 @@
 
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
-                <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+                <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
                 <p class="clickIconCopy">vickyw.design@gmail.com
                 </p>
               </button>
@@ -335,7 +335,7 @@
                   <div class="blankHXS"></div>
 
                   <li class="progress__item progress__item--active" data-aos="fade-up">
-                    <h3> <strong class=""><a href="/architecture" class="textUnderline" title="Academic Projects"> Architectural Design</a> & <a href="/photography" class="textUnderline" title="Nature & Wildlife"> Photography </a></strong></h3>
+                    <h3> <strong class=""><a href="/architecture" class="textUnderline" title="Architecture Works"> Architectural Design</a> & <a href="/photography" class="textUnderline" title="Nature & Wildlife"> Photography </a></strong></h3>
                     <h3>In design, my heart lies in a vibrant creative vision that marries creativity, innovation, and precision with out-of-the-box thinking.
                       In architecture, I focus on creating functional and visually appealing buildings that meet client' needs, balance different elements, and achieve a harmonious aesthetic.
                     </h3>
@@ -343,7 +343,8 @@
                   <div class="blankHXS"></div>
 
                   <li class="progress__item progress__item--active" data-aos="fade-up">
-                    <h3> <strong>Web Implementation & <a href="/design_system" class="textUnderline" title="Academic Projects">Design System Management</a> </strong> </h3>
+                    <h3> <strong>Web Implementation & 
+                      <a href="/design_system" class="textUnderline" title="Design System"> Design System Design/Update</a> </strong> </h3>
                     <h3>Since 2020, I have been designing, implementing, and maintaining my website. During this process, I have learned a lot, including managing a design system with HTML, CSS, JS, and EJS. I continuously improve my <a class="textUnderline" href="javascript-learning">JavaScript</a> knowledge, monitor site traffic with tools like Posthog and Google Analytics.
                     </h3>
                     <div class="blankHXS"></div>
