--- a/templates/shared/block_cardNoPassword.ejs
+++ b/templates/shared/block_cardNoPassword.ejs
@@ -1,4 +1,4 @@
-<div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder <%= hoverBorderColor %> paddingNone marginXS">
+<div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder <%= hoverBorderColor %> paddingNone marginXS">
   <a class="no-hover-effect" href="<%= cardNoPwURL%>">
     <img src="<%= cardNoPwImgURL%>" alt="<%= cardNoPwTitle %>">
     <div class="element">
